# wilber

./: .editorconfig  .gitignore  README.md  build_and_run.sh  com.cathive.Wilber.json  meson.build  meson_options.txt  wilber.doap
.github/: copilot-instructions.md
data/: com.cathive.Wilber.desktop.in  com.cathive.Wilber.gschema.xml.in  com.cathive.Wilber.metainfo.xml.in  com.cathive.Wilber.service.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  chat_message_view.ui  chat_message_view.vala  main.vala  meson.build  preferences.ui  preferences.vala  settings.vala  settings.vala.in  version.vala.in  wilber.gresource.xml  window.ui  window.vala
src/llm-backend/ollama/: api_types.vala  client.vala
src/ollama/: api_types.vala  client.vala  http_stream.vala  json_api.vala
src/util/: http_stream.vala  json_api.vala  optional.vala
tests/: meson.build  ollama__api_types_test.vala
tests/llm-backend/ollama/: api_types_test.vala
tests/util/: json_api_test.vala  optional_test.vala
